parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    operadorAr

Grammar

Rule 0     S' -> s
Rule 1     s -> PROGINI programa PROGFIN
Rule 2     programa -> incluir programa
Rule 3     programa -> cuerpo
Rule 4     cuerpo -> pin cuerpo
Rule 5     cuerpo -> definir cuerpo
Rule 6     cuerpo -> asignar cuerpo
Rule 7     cuerpo -> comLinea cuerpo
Rule 8     cuerpo -> comBloque cuerpo
Rule 9     cuerpo -> saltoLinea cuerpo
Rule 10    cuerpo -> reservadas cuerpo
Rule 11    cuerpo -> if cuerpo
Rule 12    cuerpo -> while cuerpo
Rule 13    cuerpo -> funcion cuerpo
Rule 14    cuerpo -> empty
Rule 15    pin -> DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
Rule 16    pin -> DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
Rule 17    incluir -> INCLUIR inicioParentesis comilla variable finLinea variable comilla finParentesis finLinea
Rule 18    definir -> DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
Rule 19    definir -> DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
Rule 20    definir -> DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
Rule 21    definir -> DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
Rule 22    definir -> DEFINIR inicioParentesis int variable finParentesis finLinea
Rule 23    definir -> DEFINIR inicioParentesis float variable finParentesis finLinea
Rule 24    definir -> DEFINIR inicioParentesis string variable finParentesis finLinea
Rule 25    definir -> DEFINIR inicioParentesis bool variable finParentesis finLinea
Rule 26    varTipo -> int
Rule 27    varTipo -> float
Rule 28    varTipo -> string
Rule 29    varTipo -> bool
Rule 30    valor -> numero
Rule 31    valor -> comilla variable comilla
Rule 32    valor -> true
Rule 33    valor -> false
Rule 34    reservadas -> ADEL finFuncion
Rule 35    reservadas -> ATR finFuncion
Rule 36    reservadas -> IZQ finFuncion
Rule 37    reservadas -> DER finFuncion
Rule 38    reservadas -> ESP inicioParentesis numero finParentesis finLinea
Rule 39    reservadas -> STOP finFuncion
Rule 40    asignar -> variable asig valor finLinea
Rule 41    asignar -> variable asig variable finLinea
Rule 42    finFuncion -> inicioParentesis finParentesis finLinea
Rule 43    predicado -> false
Rule 44    predicado -> true
Rule 45    predicado -> valor operadorComp valor
Rule 46    predicado -> inicioParentesis predicado operadorLog predicado finParentesis
Rule 47    operadorLog -> AND
Rule 48    operadorLog -> OR
Rule 49    if -> IF predicado BEGIN cuerpo END else
Rule 50    else -> ELSE BEGIN cuerpo END
Rule 51    else -> empty
Rule 52    while -> WHILE predicado BEGIN cuerpo END
Rule 53    funcion -> FUNC inicioParentesis parametros finParentesis retorno finLinea
Rule 54    retorno -> dosPuntos varTipo
Rule 55    retorno -> empty
Rule 56    parametros -> varTipo dosPuntos variable
Rule 57    parametros -> varTipo dosPuntos variable coma parametros
Rule 58    parametros -> empty
Rule 59    empty -> <empty>

Terminals, with rules where they appear

ADEL                 : 34
AND                  : 47
ATR                  : 35
BEGIN                : 49 50 52
DEF                  : 15 16
DEFINIR              : 18 19 20 21 22 23 24 25
DER                  : 37
ELSE                 : 50
END                  : 49 50 52
ENT                  : 16
ESP                  : 38
FUNC                 : 53
IF                   : 49
INCLUIR              : 17
IZQ                  : 36
OR                   : 48
PIN                  : 15 16
PROGFIN              : 1
PROGINI              : 1
SAL                  : 15
STOP                 : 39
WHILE                : 52
asig                 : 18 19 20 21 40 41
bool                 : 21 25 29
comBloque            : 8
comLinea             : 7
coma                 : 57
comilla              : 17 17 20 20 31 31
dosPuntos            : 15 16 54 56 57
error                : 
false                : 33 43
finLinea             : 15 16 17 17 18 19 20 21 22 23 24 25 38 40 41 42 53
finParentesis        : 15 16 17 18 19 20 21 22 23 24 25 38 42 46 53
float                : 19 23 27
inicioParentesis     : 15 16 17 18 19 20 21 22 23 24 25 38 42 46 53
int                  : 18 22 26
numero               : 18 19 30 38
operadorAr           : 
operadorComp         : 45
saltoLinea           : 9
string               : 20 24 28
true                 : 32 44
variable             : 15 16 17 17 18 19 20 20 21 22 23 24 25 31 40 41 41 56 57

Nonterminals, with rules where they appear

asignar              : 6
cuerpo               : 3 4 5 6 7 8 9 10 11 12 13 49 50 52
definir              : 5
else                 : 49
empty                : 14 51 55 58
finFuncion           : 34 35 36 37 39
funcion              : 13
if                   : 11
incluir              : 2
operadorLog          : 46
parametros           : 53 57
pin                  : 4
predicado            : 46 46 49 52
programa             : 1 2
reservadas           : 10
retorno              : 53
s                    : 0
valor                : 21 40 45 45
varTipo              : 54 56 57
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . PROGINI programa PROGFIN

    PROGINI         shift and go to state 2

    s                              shift and go to state 1

state 1

    (0) S' -> s .



state 2

    (1) s -> PROGINI . programa PROGFIN
    (2) programa -> . incluir programa
    (3) programa -> . cuerpo
    (17) incluir -> . INCLUIR inicioParentesis comilla variable finLinea variable comilla finParentesis finLinea
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    INCLUIR         shift and go to state 6
    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)

    programa                       shift and go to state 3
    incluir                        shift and go to state 4
    cuerpo                         shift and go to state 5
    pin                            shift and go to state 8
    definir                        shift and go to state 9
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 3

    (1) s -> PROGINI programa . PROGFIN

    PROGFIN         shift and go to state 30


state 4

    (2) programa -> incluir . programa
    (2) programa -> . incluir programa
    (3) programa -> . cuerpo
    (17) incluir -> . INCLUIR inicioParentesis comilla variable finLinea variable comilla finParentesis finLinea
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    INCLUIR         shift and go to state 6
    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)

    incluir                        shift and go to state 4
    programa                       shift and go to state 31
    cuerpo                         shift and go to state 5
    pin                            shift and go to state 8
    definir                        shift and go to state 9
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 5

    (3) programa -> cuerpo .

    PROGFIN         reduce using rule 3 (programa -> cuerpo .)


state 6

    (17) incluir -> INCLUIR . inicioParentesis comilla variable finLinea variable comilla finParentesis finLinea

    inicioParentesis shift and go to state 32


state 7

    (40) asignar -> variable . asig valor finLinea
    (41) asignar -> variable . asig variable finLinea

    asig            shift and go to state 33


state 8

    (4) cuerpo -> pin . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)
    END             reduce using rule 59 (empty -> .)

    pin                            shift and go to state 8
    cuerpo                         shift and go to state 34
    definir                        shift and go to state 9
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 9

    (5) cuerpo -> definir . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)
    END             reduce using rule 59 (empty -> .)

    definir                        shift and go to state 9
    cuerpo                         shift and go to state 35
    pin                            shift and go to state 8
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 10

    (6) cuerpo -> asignar . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)
    END             reduce using rule 59 (empty -> .)

    asignar                        shift and go to state 10
    cuerpo                         shift and go to state 36
    pin                            shift and go to state 8
    definir                        shift and go to state 9
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 11

    (7) cuerpo -> comLinea . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)
    END             reduce using rule 59 (empty -> .)

    cuerpo                         shift and go to state 37
    pin                            shift and go to state 8
    definir                        shift and go to state 9
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 12

    (8) cuerpo -> comBloque . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .

    comLinea        shift and go to state 11
    comBloque       shift and go to state 12
    saltoLinea      shift and go to state 13
    DEF             shift and go to state 19
    DEFINIR         shift and go to state 20
    variable        shift and go to state 7
    ADEL            shift and go to state 21
    ATR             shift and go to state 22
    IZQ             shift and go to state 23
    DER             shift and go to state 24
    ESP             shift and go to state 25
    STOP            shift and go to state 26
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FUNC            shift and go to state 29
    PROGFIN         reduce using rule 59 (empty -> .)
    END             reduce using rule 59 (empty -> .)

    cuerpo                         shift and go to state 38
    pin                            shift and go to state 8
    definir                        shift and go to state 9
    asignar                        shift and go to state 10
    reservadas                     shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    funcion                        shift and go to state 17
    empty                          shift and go to state 18

state 13

    (9) cuerpo -> saltoLinea . cuerpo
    (4) cuerpo -> . pin cuerpo
    (5) cuerpo -> . definir cuerpo
    (6) cuerpo -> . asignar cuerpo
    (7) cuerpo -> . comLinea cuerpo
    (8) cuerpo -> . comBloque cuerpo
    (9) cuerpo -> . saltoLinea cuerpo
    (10) cuerpo -> . reservadas cuerpo
    (11) cuerpo -> . if cuerpo
    (12) cuerpo -> . while cuerpo
    (13) cuerpo -> . funcion cuerpo
    (14) cuerpo -> . empty
    (15) pin -> . DEF PIN inicioParentesis variable dosPuntos SAL finParentesis finLinea
    (16) pin -> . DEF PIN inicioParentesis variable dosPuntos ENT finParentesis finLinea
    (18) definir -> . DEFINIR inicioParentesis int variable asig numero finParentesis finLinea
    (19) definir -> . DEFINIR inicioParentesis float variable asig numero finParentesis finLinea
    (20) definir -> . DEFINIR inicioParentesis string variable asig comilla variable comilla finParentesis finLinea
    (21) definir -> . DEFINIR inicioParentesis bool variable asig valor finParentesis finLinea
    (22) definir -> . DEFINIR inicioParentesis int variable finParentesis finLinea
    (23) definir -> . DEFINIR inicioParentesis float variable finParentesis finLinea
    (24) definir -> . DEFINIR inicioParentesis string variable finParentesis finLinea
    (25) definir -> . DEFINIR inicioParentesis bool variable finParentesis finLinea
    (40) asignar -> . variable asig valor finLinea
    (41) asignar -> . variable asig variable finLinea
    (34) reservadas -> . ADEL finFuncion
    (35) reservadas -> . ATR finFuncion
    (36) reservadas -> . IZQ finFuncion
    (37) reservadas -> . DER finFuncion
    (38) reservadas -> . ESP inicioParentesis numero finParentesis finLinea
    (39) reservadas -> . STOP finFuncion
    (49) if -> . IF predicado BEGIN cuerpo END else
    (52) while -> . WHILE predicado BEGIN cuerpo END
    (53) funcion -> . FUNC inicioParentesis parametros finParentesis retorno finLinea
    (59) empty -> .
